Add steps part in keks.html
Finished the keks.html by adding in the steps for the recipe

--- a/recipes/keks.html
+++ b/recipes/keks.html
@@ -23,5 +23,25 @@
             <li>сода за хляб - 1 чаена лъжица</li>
             <li>пудра захар - 2 супени лъжици</li>
         </ul>
+        <h2>Приготвяне</h2>
+        <ol>
+            <li>
+                Първата стъпка от рецептата за лесен кекс е подготовката на течната смес. Разбивате много добре захарта <br>
+                с яйцата с миксер или тел за разбиване, след това добавяте киселото мляко, в което сте разбъркали содата <br>
+                и отново разбърквате. Добавяте олиотои ванилията и отново разбърквате.
+            </li>
+            <li>
+                Пресявате брашното заедно с бакпулвера и малко по малко, при непрекъснато разбиване го добавяте към течната смес<br>
+                и разбивате до получаване на гладна смес. Намазвате формата за кекс с олио и изсипвате сместа, като оставате 1 кафена чаша от нея,<br>
+                в която добавяте какаото, за да я оцветите. Изсипете какаовата смес равномерно върху ваниловата.
+            </li>
+            <li>
+                Печете кекса в предварително загрята на 180 градуса фурна за около 40 минути, като проверявате дали е изпечен <br>
+                като го бучнете с клечка за зъби - ако излезе суха лесният кекс е готов. След като изстине поръсвате кекса с пудра захар.
+            </li>
+            <li>
+                Режете, ядете, ревете и благодарите на божествата на кекса, че са ви благословили с толкова прекрасно неземно преживяване.
+            </li>
+        </ol>
     </body>
 </html>
