Create new recipe page
Added a Spageti recipe page. Also added an image and a link to main
page in the Keks recipe page. Added link to Spageti recipe page in
main page.

--- a/recipes/keks.html
+++ b/recipes/keks.html
@@ -43,5 +43,9 @@
                 Режете, ядете, ревете и благодарите на божествата на кекса, че са ви благословили с толкова прекрасно неземно преживяване.
             </li>
         </ol>
+        <img src="happychef.webp" width="200">
+        <p>
+        <a href="../index.html">Обратно към началната страница</a>
+        </p>
     </body>
 </html>
