--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     </head>
     <body>
         <h1>Добчови рецепти</h1>
-        <a href="./recipes/keks.html">Вкусен кекс</a>
+        <ul>
+            <li>
+                <a href="./recipes/keks.html">Вкусен кекс</a>
+            </li>
+            <li>
+                <a href="./recipes/spageti.html">Спагети Болонезе</a>
+            </li>
+        </ul>
     </body>
 </html>
