--- a/recipes/keks.html
+++ b/recipes/keks.html
@@ -43,7 +43,7 @@
                 Режете, ядете, ревете и благодарите на божествата на кекса, че са ви благословили с толкова прекрасно неземно преживяване.
             </li>
         </ol>
-        <img src="happychef.webp" width="200">
+        <img src="happychef.webp" width="200" alt="A happy cartoon chef doing the OK sign with his hand">
         <p>
         <a href="../index.html">Обратно към началната страница</a>
         </p>
