Fix typos in Spageti recipe page
Fixed some typos and edited the text a bit so the recipe steps
are more understandable.

--- a/recipes/spageti.html
+++ b/recipes/spageti.html
@@ -32,13 +32,13 @@
         <h2>Приготвяне</h2>
         <ol>
             <li>Запържваме каймата в зехтин и я отделяме настрана.</li>
-            <li>В същата манина запържваме лука и малко преди да е готов, добавяме и чесъъна.</li>
-            <li>След като лука и чесъна придобият златист оттенък, добавяме доматения сос и подправките (на вкус).</li>
-            <li>Трябва да поври 3-5мин и после добавяме каймата и оставяме да се готви на слаб огън.</li>
-            <li>Успоредно с това сваряваме спагетите според инструкциите на пакета.</li>
-            <li>След като спагетите и соса са готови, отцеждаме спагетите, настъргваме моцарелата върху тях и ги омесваме.</li>
+            <li>В същата мазнина запържваме лука и малко преди да е готов, добавяме и чесъна.</li>
+            <li>След като лукът и чесънът придобият златист оттенък, добавяме доматения сос и подправките (на вкус).</li>
+            <li>Трябва да поври 3-5мин, после добавяме каймата и оставяме да се готви на слаб огън.</li>
+            <li>Успоредно с това сваряваме спагетите според инструкциите на пакета им.</li>
+            <li>След като спагетите са готови - отцеждаме ги от водата, настъргваме моцарелата върху тях и ги омесваме.</li>
             <li>Добавяме соса към вече равномерно омесените моцарелени спагети и ги разбъркваме добре.</li>
-            <li>Сервираме с чаша домашно червено вино от с.Осмар, и се радваме, че сме живи и способни да изпитаме такъв екстаз от кулинарно приключение! </li>
+            <li>Сервираме с чаша домашно червено вино от с.Осмар, и се радваме, че сме живи! </li>
         </ol>
         <img src="spagetichef.jpg" alt="A satisfied cartoon chef holding a plate of hot Spaghetti">
        <p>
