Change title of index page
Changed the title from latin to cyrillic so it better suites all
the rest of the text on the site.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Dobrin Recipes</title>
+        <title>Добчови рецепти</title>
     </head>
     <body>
         <h1>Добчови рецепти</h1>
