Move images in new folder, create new recipe page
Created a new /images folder for all the images and moved them in there
so everything is organized better. Added a full new Musaka recipe page
with images, description, ingredients, steps, etc. Added an image and
description in the main page.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     </head>
     <body>
         <h1>Добчови рецепти</h1>
+        <img src="./images/dobcho.jpg" width="500" alt="A confused guy in the mountains">
+        <p>Здравейте! Аз съм небезизвестния Добчо и ще ви представя няколко рецепти за вкусни хапванки.</p>
+        <p>Вдъхновете си, сгответе и се наяжте като маймуни в сезона на бананите.</p>
+        <h2>Списък с рецепти</h2>
         <ul>
             <li>
                 <a href="./recipes/keks.html">Вкусен кекс</a>
             </li>
             <li>
                 <a href="./recipes/spageti.html">Спагети Болонезе</a>
+            </li>
+            <li>
+                <a href="./recipes/musaka.html">Мусакичка</a>
             </li>
         </ul>
     </body>
