--- a/recipes/keks.html
+++ b/recipes/keks.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Вкусен Кекс</h1>
-        <img src="keks.webp" alt="A delicious muffin">
+        <img src="../images/keks.webp" alt="A delicious muffin" width="500">
         <h2>За тази рецепта</h2>
         <p>Много обичам кекс. Кой не обича!? Този вкусен кекс е перфектен - както за закуска, придружен с айрян, <br> така и за следобедна хапванка с чаша топъл чай. Пръстите да си оближе човек.</p>
         <p>Честно казано, никога не съм правил кекс, но за сметка на това жена ми е факир и ще споделя нейната рецепта!</p>
@@ -43,7 +43,7 @@
                 Режете, ядете, ревете и благодарите на божествата на кекса, че са ви благословили с толкова прекрасно неземно преживяване.
             </li>
         </ol>
-        <img src="happychef.webp" width="200" alt="A happy cartoon chef doing the OK sign with his hand">
+        <img src="../images/happychef.webp" width="200" alt="A happy cartoon chef doing the OK sign with his hand">
         <p>
         <a href="../index.html">Обратно към началната страница</a>
         </p>
