--- a/recipes/spageti.html
+++ b/recipes/spageti.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Спагети Болонезе</h1>
-        <img src="spageti.jpg" alt="A delicious plate of Spaghetti Bolognese">
+        <img src="../images/spageti.jpg" alt="A delicious plate of Spaghetti Bolognese" width="500">
         <h2>За тази рецепта</h2>
         <p>Едно от любимите ми ястия още от коги бех малко сладко момченце са именно спагетите Болонезе!</p>
         <p>Сочни, ароматни - те са цяло приключение за вкусовите сетива на всеки един човек и никога не разочароват!<br>
@@ -40,7 +40,7 @@
             <li>Добавяме соса към вече равномерно омесените моцарелени спагети и ги разбъркваме добре.</li>
             <li>Сервираме с чаша домашно червено вино от с.Осмар, и се радваме, че сме живи! </li>
         </ol>
-        <img src="spagetichef.jpg" alt="A satisfied cartoon chef holding a plate of hot Spaghetti">
+        <img src="../images/spagetichef.jpg" alt="A satisfied cartoon chef holding a plate of hot Spaghetti">
        <p>
         <a href="../index.html">Обратно към началната страница</a>
        </p>
