Add description in main page
Finished up with the description on the main page and changed
the image on top in addition to adding another image on the bottom.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Добчови рецепти</h1>
-        <img src="./images/dobcho.jpg" width="500" alt="A confused guy in the mountains">
+        <img src="./images/taralej.jpg" width="400" alt="A confused guy in the mountains">
         <p>Здравейте! Аз съм небезизвестния Добчо и ще ви представя няколко рецепти за вкусни хапванки.</p>
         <p>Вдъхновете си, сгответе и се наяжте като маймуни в сезона на бананите.</p>
         <h2>Списък с рецепти</h2>
@@ -21,5 +21,12 @@
                 <a href="./recipes/musaka.html">Мусакичка</a>
             </li>
         </ul>
+        <p>Надявам се тези рецепти да са ви харесали, защото на мен със сигурност ми харесват.</p>
+        <p>Неведнъж се осъзнах с течащата слюнка описвайки рецепти и осъзнах, че съм гладен. <br>
+        Коремчето къркори прекалено, за да имам време да го задоволя с някое от тези ястия, затова <br>
+        ще откъсна някое друго доматче от градинката, ще нарежем сиренце и мезенце със скъпата ми женичка, <br>
+        и ще се насладим на един лек, августовски селски обяд!</p>
+        <p>До нови срещи в и успех с готвенето!</p>
+        <img src="./images/jake.jpg" width="500" alt="Jake the dog cooking bacon pancakes that have caught on fire">
     </body>
 </html>
